k8s/server-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-node-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-node-backend
  template:
    metadata:
      labels:
        app: my-node-backend
    spec:
      containers:
        - name: my-node-backend
          image: jassercherif/server:v1.7
          ports:
            - containerPort: 3700
          resources:
            requests:
              memory: "256Mi" # Request 256 MB of memory
            limits:
              memory: "512Mi" # Limit to 512 MB of memory
