k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: jassercherif/server:latest
          ports:
            - containerPort: 3700
---
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  ports:
    - port: 3700
      targetPort: 3700
  selector:
    app: server
  type: NodePort
