k8s/server-service.yml
# service.yaml

apiVersion: v1
kind: Service
metadata:
  name: my-node-backend-service
spec:
  type: NodePort
  selector:
    app: my-node-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3700
      nodePort: 30001
